Update 'yvpe6h8wz-go' component image to: quay.io/rhtap_qe/rhtap-qe-go:ba90df65e69067c415c5a90e204a9f5f0a5371e6@sha256:b9753ee574b28499b7cb3b93ea36fb133c778d38f918650c337f6f6404300dc5

--- a/components/yvpe6h8wz-go/overlays/development/deployment-patch.yaml
+++ b/components/yvpe6h8wz-go/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: yvpe6h8wz-go
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-go:ba90df65e69067c415c5a90e204a9f5f0a5371e6@sha256:b9753ee574b28499b7cb3b93ea36fb133c778d38f918650c337f6f6404300dc5
+          name: container-image
